--- a/themes/basic/layouts/partials/breadcrumbs.html
+++ b/themes/basic/layouts/partials/breadcrumbs.html
@@ -4,16 +4,16 @@
     {{ range $i, $p := $ancestors }}
       {{ if ne $p.RelPermalink "/" }}
       <li>
-        <a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a>
+        <a href="{{ $p.RelPermalink }}">{{ if $p.LinkTitle }}{{ $p.LinkTitle }}{{ else }}{{ $p.Title }}{{ end }}</a>
         <span class="separator">›</span>
       </li>
       {{ end }}
     {{ end }}
     <li class="current">
       {{ if eq $.RelPermalink "/docs/" }}
-        <a href="{{ $.RelPermalink }}">{{ $.Title }}</a>
+        <a href="{{ $.RelPermalink }}">{{ if $.LinkTitle }}{{ $.LinkTitle }}{{ else }}{{ $.Title }}{{ end }}</a>
       {{ else }}
-        {{ $.Title }}
+        {{ if $.LinkTitle }}{{ $.LinkTitle }}{{ else }}{{ $.Title }}{{ end }}
       {{ end }}
     </li>
   </ol>
