--- a/themes/basic/assets/sass/_docs.scss
+++ b/themes/basic/assets/sass/_docs.scss
@@ -93,32 +93,17 @@ $header-offset: rem(74px);
 
     // Heading anchor links
     .heading-anchor {
-      opacity: 0;
-      color: #9ca3af;
+      opacity: 0.7;
+      color: $light-gray;
       text-decoration: none;
       font-weight: normal;
-      transition: opacity 0.2s ease;
+      transition: opacity 0.2s ease, color 0.2s ease;
       margin-left: rem(8px);
-      display: inline-flex;
-      align-items: center;
-      vertical-align: middle;
 
       &:hover {
+        opacity: 1;
         color: $third;
       }
-
-      svg {
-        display: block;
-      }
-    }
-
-    h1:hover .heading-anchor,
-    h2:hover .heading-anchor,
-    h3:hover .heading-anchor,
-    h4:hover .heading-anchor,
-    h5:hover .heading-anchor,
-    h6:hover .heading-anchor {
-      opacity: 1;
     }
 
     p {
