--- a/themes/basic/assets/sass/_shared.scss
+++ b/themes/basic/assets/sass/_shared.scss
@@ -219,3 +219,45 @@ a {
 .bold {
   font-weight: 600;
 }
+
+// Lists
+ul, ol {
+  margin-bottom: rem(16px);
+  padding-left: rem(32px);
+}
+
+// Code blocks
+.highlight {
+  border: 1px solid #e5e7eb;
+  margin-bottom: rem(12px);
+  border-radius: 0;
+
+  pre {
+    margin: 0;
+    padding: rem(12px);
+    overflow-x: auto;
+    border-radius: 0;
+
+    code {
+      margin: 0;
+      padding: 0;
+      line-height: 1.5;
+      @include font-size('small');
+    }
+  }
+}
+
+// Inline code styling
+:not(pre) > code {
+  padding: rem(2px) rem(6px);
+  background-color: $lighter-gray;
+  color: $black;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 0.9em;
+  border-radius: rem(3px);
+
+  &::before,
+  &::after {
+    content: none;
+  }
+}
