--- a/themes/basic/layouts/partials/mobile-nav.html
+++ b/themes/basic/layouts/partials/mobile-nav.html
@@ -16,6 +16,9 @@
   <nav id="mobile-menu-body" role="navigation" class="dropdown-content" tabIndex="-1">
     <ul role="menubar" class="dropdown-list">
       <li role="none">
+        <a role="menuitem" href="/news" class="dropdown-link">News</a>
+      </li>
+      <li role="none">
         <a role="menuitem" href="/docs" class="dropdown-link">Docs</a>
       </li>
       <li role="none">
