--- a/themes/basic/assets/sass/_variables.scss
+++ b/themes/basic/assets/sass/_variables.scss
@@ -2,6 +2,9 @@
 $header-height: 60px;
 $footer-height: 56px;
 
+// Content container dimensions
+$content-max-width: 1280px;
+
 // Breakpoints
 $xl-breakpoint: 1441px;
 $lg-breakpoint: 992px;
