--- a/themes/basic/layouts/partials/breadcrumbs.html
+++ b/themes/basic/layouts/partials/breadcrumbs.html
@@ -10,10 +10,14 @@
       {{ end }}
     {{ end }}
     <li class="current">
-      {{ if eq $.RelPermalink "/docs/" }}
+      {{ if or (eq $.RelPermalink "/docs/") (eq $.RelPermalink "/news/") }}
         <a href="{{ $.RelPermalink }}">{{ if $.LinkTitle }}{{ $.LinkTitle }}{{ else }}{{ $.Title }}{{ end }}</a>
       {{ else }}
-        {{ if $.LinkTitle }}{{ $.LinkTitle }}{{ else }}{{ $.Title }}{{ end }}
+        {{ if eq $.Section "news" }}
+          {{ $.Date.Format "Jan 2, 2006" }}
+        {{ else }}
+          {{ if $.LinkTitle }}{{ $.LinkTitle }}{{ else }}{{ $.Title }}{{ end }}
+        {{ end }}
       {{ end }}
     </li>
   </ol>
